# kinect2_bagplayer

./: CMakeLists.txt  README.md  package.xml
config/: resize_kinect_depth.yaml
launch/: kinect_player.launch
