<?xml version="1.0"?>
<package>
  <name>kinect2_bagplayer</name>
  <version>0.0.1</version>
  <description>Republisher extra kinect2 topics from a reduced recorded set.</description>

  <maintainer email="mfernandezcarmona@lincoln.ac.uk">Manuel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
